--- a/plugin.yml
+++ b/plugin.yml
@@ -1,3 +1,3 @@
 name: HardRockInv
-main: ca.hardrockrealms.hardrockinv.HardRockInv
-version: 0.1
+main: ca.hardrockrealms.digiwiz.hardrockinv.HardRockInv
+version: 0.1-alpha
